Fixed scrollbars from index.css

--- a/resources/index.css
+++ b/resources/index.css
@@ -142,7 +142,6 @@ header #mobile {
     box-shadow: 0px 0px 6px 1px rgba(158, 211, 246, 0.5);
     border-radius: 4px;
     margin: 2em 1em;
-    overflow: scroll;
     flex: 2 1 auto;
 }
 
@@ -170,7 +169,6 @@ header #mobile {
     border: 1px solid rgba(158, 211, 246, 0.1);
     box-shadow: 0px 0px 6px 1px rgba(158, 211, 246, 0.5);
     border-radius: 4px;
-    overflow: scroll;
     flex: 1 2 auto;
 }
 
